--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Context Search",
-  "name": "context-menu-search",
-  "version": "0.0.1",
+  "name": "context-search",
+  "version": "1.0",
   "description": "Provide information about the selected text in a context.",
   "main": "index.js",
   "author": "Jatin Chhikara",
